--- a/Memory/Base.lproj/Main.storyboard
+++ b/Memory/Base.lproj/Main.storyboard
@@ -139,6 +139,9 @@
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="systemBold"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="schummelClicked:" target="XfG-lQ-9wD" id="Ten-Fi-GOG"/>
+                                </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z6H-53-nOq">
                                 <rect key="frame" x="263" y="10" width="97" height="32"/>
