--- a/Memory/Base.lproj/Main.storyboard
+++ b/Memory/Base.lproj/Main.storyboard
@@ -151,7 +151,7 @@
                                     <font key="font" metaFont="systemBold"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="neustartClicked:" target="XfG-lQ-9wD" id="rFC-vI-lNJ"/>
+                                    <action selector="closeClicked:" target="XfG-lQ-9wD" id="yq5-Cn-I6x"/>
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AuN-BH-GgE">
@@ -166,7 +166,7 @@
                             <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j39-Ot-bDD">
                                 <rect key="frame" x="154" y="42" width="101" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <sliderCell key="cell" state="on" alignment="left" maxValue="10" doubleValue="5" tickMarkPosition="above" numberOfTickMarks="5" sliderType="linear" id="IoG-f4-ceB"/>
+                                <sliderCell key="cell" state="on" userInterfaceLayoutDirection="rightToLeft" alignment="left" maxValue="10" doubleValue="5" tickMarkPosition="above" numberOfTickMarks="5" allowsTickMarkValuesOnly="YES" sliderType="linear" id="IoG-f4-ceB"/>
                                 <connections>
                                     <action selector="spielStarke:" target="XfG-lQ-9wD" id="l3U-3x-t2S"/>
                                 </connections>
@@ -175,7 +175,7 @@
                                 <rect key="frame" x="268" y="44" width="88" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="jcf-oh-6td">
-                                    <font key="font" metaFont="system"/>
+                                    <font key="font" metaFont="systemBold"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
